indent, minor changes, add many_folders test

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
 bin_PROGRAMS = inode_count_modifier
 inode_count_modifier_SOURCES = main.c extent.c increase_inode_count.c reduce_inode_count.c resource_track.c sim_progress.c resize2fs_common.c
-inode_count_modifier_LDADD = -lext2fs -lcom_err
+#inode_count_modifier_LDADD = -lext2fs -lcom_err
